<resources>
    <string name="app_name">U Shop</string>
    <string name="register">Register</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_up">sign up</string>
    <string name="already_have_account_sign_in">Already have account?</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Dont have account?</string>
    <string name="signup">Sign Up</string>

    <string name="category">Product Category</string>
    <string name="second_slide">Fast Delivery</string>
    <string name="third_slide"> Good Services</string>
    <string name="description">Product Description</string>
    <string name="lets_get_started">Lets get started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phones">Phones</string>
    <string name="product_category">Product Category</string>
    <string name="product_categories">Product Categories</string>
    <string name="welcome_amanda">Welcome Amanda</string>
    <string name="price">price</string>
    <string name="phone_name">Phone Name</string>
</resources>