<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

    <TextView
        android:id="@+id/registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/purple_200"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_name"
        android:padding="14dp"
        android:layout_marginTop="8dp"
        android:inputType="textPersonName"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_person"
        android:drawablePadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registration"
        app:layout_constraintWidth_percent=".8"
        tools:layout_editor_absoluteX="16dp"
        android:autofillHints="username" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="0dp"
        android:inputType="textEmailAddress"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_email"
        android:padding="14dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintWidth_percent=".8"
        tools:layout_editor_absoluteX="16dp"
        android:autofillHints="email" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:padding="14dp"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:background="@drawable/edit_text_bg"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerEmail"
        app:layout_constraintWidth_percent=".8"
        tools:layout_editor_absoluteX="16dp"
        android:autofillHints="password" />

    <!--    <EditText-->
    <!--        android:id="@+id/registerConfirmPassword"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:hint="@string/confirm_password"-->
    <!--        android:padding="14dp"-->
    <!--        android:inputType="textPassword"-->
    <!--        android:layout_marginTop="8dp"-->
    <!--        android:background="@drawable/edit_text_bg"-->
    <!--        android:drawableStart="@drawable/ic_security"-->
    <!--        android:drawablePadding="5dp"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/registerPassword"-->
    <!--        app:layout_constraintWidth_percent=".8"-->
    <!--        tools:layout_editor_absoluteX="16dp"-->
    <!--        android:autofillHints="password" />-->

    <Button
        android:id="@+id/registerButton"
        android:layout_width="137dp"
        android:layout_height="63dp"
        android:layout_marginTop="60dp"
        android:hint="@string/sign_up"
        android:padding="15dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:onClick="signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword"
        app:layout_constraintWidth_percent=".4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/already_have_account_sign_in"
        android:textColor="@color/purple_200"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.404"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton"
        app:layout_constraintVertical_bias="0.258" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:textStyle="bold"
        android:onClick="signin"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>