<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_marginTop="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:background="@color/cardview_shadow_start_color">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:id="@+id/myImage"
            android:scaleType="centerInside"
            android:src="@drawable/milk"
            android:background="@color/purple_200"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phoneName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_name"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/phoneDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="25sp"
                android:textColor="@color/black"
                />
            <TextView
                android:id="@+id/phonePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="25sp"
                android:textColor="@color/black"
                />

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>